overflow fixed

--- a/style.css
+++ b/style.css
@@ -3,9 +3,6 @@
   padding: 0;
   box-sizing: border-box;
 }
-html {
-  overflow-x: hidden;
-}
 li {
   list-style: none;
   margin: 0 8px;
